<resources>
    <string name="app_name">Route Rush</string>
    <string name="logo">AppLogo</string>
    <string name="logo_image">RouteRushLogo</string>
    <string name="route_rush">Route Rush</string>
    <string name="btn_login">Login</string>
    <string name="btn_SignIn">Sign In</string>
    <string name="email">Email</string>
    <string name="login_label">Login</string>
    <string name="Password_hint">Password</string>
    <string name="register_label">Register</string>
    <string name="btn_register">Register</string>
    <string name="email_hint">Email</string>
    <string name="name_hint">Name</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="menu_desc">Menu Button</string>
    <string name="menu_btn_desc">Menu</string>
    <string name="btn_optimize_text">Optimize Route</string>
    <string name="enter_address">Enter Address</string>
    <string name="user_placeholder">Mark Dexter</string>
    <string name="email_placeholder">user@example.com</string>
    <string name="btn_add_route">Add Route</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="next">Lanjut</string>
    <string name="register_success">Register Berhasil!</string>
    <string name="register_fail">Register Gagal</string>
    <string name="register_success_message">Silahkan Login!</string>
    <string name="retry">Silahkan Coba Lagi!</string>
    <string name="error_empty">Harap isi semua kolom</string>
    <string name="error_invalid_email">Tolong gunakan Format Email yang benar!</string>
    <string name="error_short_password">Password tidak boleh kurang dari 8 karakter</string>
    <string name="error_empty_password">Password masih Kosong!</string>
    <string name="error_empty_email">email masih kosong!</string>
    <string name="error_empty_name">Nama masih Kosong!</string>
    <string name="error_existingemail">| Email Sudah Ada !</string>
    <string name="loginResult">Login Berhasil!</string>

    <string name="location_number">%1$d | </string>
    <string name="recent_routes">Recent Routes</string>
    <string name="time_required">1 hr </string>
    <string name="fuel_consumption">4 litre</string>
    <string name="btn_navigate">Navigate</string>
    <string name="time_logo">icon time</string>
    <string name="fuel_icon_desc">fuel icon</string>
    <string name="distance">20 KM</string>
</resources>