<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Logo Image -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="230dp"
        android:layout_height="165dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:contentDescription="@string/logo_image"
        android:src="@drawable/route_rush_logo" />

    <!-- Name TextView -->
    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/route_rush"
        android:fontFamily="@font/museomoderno"
        android:textSize="24sp"
        android:textStyle="bold"

        android:textColor="@color/darkblue"
        />

    <!-- Button Container -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp">

        <!-- Login Button -->
        <Button
            android:id="@+id/loginButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_login"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/robotosemibold"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <!-- Sign In Button -->
        <Button
            android:id="@+id/signInButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_button"
            android:layout_weight="1"
            android:fontFamily="@font/robotosemibold"
            android:text="@string/btn_SignIn"
            />
    </LinearLayout>

</RelativeLayout>
