<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Container with rounded corners -->
    <androidx.cardview.widget.CardView
        android:id="@+id/login_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue_transparent_20"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:layout_constraintWidth_percent="0.85"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Inner Layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical"
            android:padding="16dp">

            <!-- Login Title -->
            <TextView
                android:id="@+id/tv_login_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_label"
                android:textSize="24sp"
                android:fontFamily="@font/mulish_extra_bold"
                android:textStyle="bold"
                android:gravity="start"
                 />

            <!-- Email EditText -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <com.example.routerush.custom.CustomEmailEditText
                    android:id="@+id/et_email"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:fontFamily="@font/open_sans_regular"
                    android:background="@drawable/rounded_textview"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password EditText -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:endIconMode="password_toggle"
               >

                <com.example.routerush.custom.CustomPasswordEditText
                    android:id="@+id/et_password"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="@drawable/rounded_textview"
                    android:hint="@string/Password_hint"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Login Button -->
            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_button"
                android:text="@string/btn_login"
                android:fontFamily="@font/robotosemibold"
                android:backgroundTint="@color/lightblue" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>