<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout">

<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.map.HomeActivity" >

<fragment
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.map.HomeActivity" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_menu_24"
        app:layout_anchor="@id/map"
        app:layout_anchorGravity="top|start"
        android:layout_margin="16dp"
        app:backgroundTint="?attr/colorPrimary"
        android:contentDescription="@string/menu_btn_desc"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Fab.Circle"


        />


    <FrameLayout
        android:id="@+id/sheet"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        android:background="@drawable/rounded">

        <ImageView
            android:layout_marginTop="10dp"
            android:layout_width="200dp"
            android:layout_height="5dp"
            android:layout_gravity="center|top"
            android:scaleType="centerCrop"
            android:src="@drawable/slidebar_sign" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/tv_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/enter_address"
                android:textSize="16sp"
                android:padding="20dp"
                android:background="@drawable/rounded_textview"
                android:gravity="start|center_vertical" />

            <ImageButton
                android:id="@+id/btn_erase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:padding="16dp"
                android:src="@drawable/baseline_delete_24"
                android:backgroundTint="@color/white" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_addresses"

            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:layout_marginTop="120dp"
            android:layout_marginBottom="16dp"
            android:padding="8dp" />

        <Button
            android:id="@+id/btn_optimize_route"
            android:layout_width="match_parent"
            android:background="@drawable/rounded_button"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="16dp"
            android:text="@string/btn_optimize_text"
            />

</FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/menu_main"
        app:headerLayout="@layout/nav_header_main"
        android:fitsSystemWindows="true" />
</androidx.drawerlayout.widget.DrawerLayout>

